--- a/Spanzuratoarea.CSS
+++ b/Spanzuratoarea.CSS
@@ -4,6 +4,7 @@ body {
     background-attachment: fixed;  
     background-size: cover;
 }
+
 #divBorder { 
     background-color: rgba(255, 127, 80, 0.199);
     border: 2px solid black;
@@ -12,12 +13,14 @@ body {
     text-align: left;
     text-align: initial;
 }
+
 #gameBody {
     border: 2px solid red;
     text-align: center;
     width: 200px;
     height: 310px;
 }
-#inputLeaters {
-    width: 10px;
+
+#wordletter {
+    font-size: 40px;
 }
